--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env.local
+.env
+
 # .env*.local
 
 # vercel
@@ -36,5 +39,3 @@ yarn-error.log*
 next-env.d.ts
 
 /.history
-
-
